@@ -12,7 +12,7 @@
 11:                 <span class='def-Keyword'>if</span> <span class='def-Symbol'>(</span>e <span class='def-Symbol'>&amp;&amp;</span> tinyMCE<span class='def-Symbol'>.</span>blockRegExp<span class='def-Symbol'>.</span><span class='def-Keyword'>test</span><span class='def-Symbol'>(</span>e<span class='def-Symbol'>.</span>nodeName<span class='def-Symbol'>)</span> <span class='def-Symbol'>&amp;&amp;</span> e<span class='def-Symbol'>.</span>firstChild<span class='def-Symbol'>)</span> <span class='def-SymbolStrong def-Symbol'>{</span>
 12:                         v <span class='def-Symbol'>=</span> e<span class='def-Symbol'>.</span>firstChild<span class='def-Symbol'>.</span>nodeValue<span class='def-SymbolStrong def-Symbol'>;</span>
 13: 
-14:                         <span class='def-Keyword'>if</span> <span class='def-Symbol'>(</span>v <span class='def-Symbol'>&amp;&amp;</span> v<span class='def-Symbol'>.</span>length <span class='def-Symbol'>></span> <span class='def-NumberDec def-Number'>1</span> <span class='def-Symbol'>&amp;&amp;</span><span class='def-String'> </span><span class='def-StringEdge def-String'>/</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>(</span><span class='regexp-MetaSymb def-Symbol'>^</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymbStrong def-SymbolStrong def-Symbol'>|</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymb def-Symbol'>$</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>)</span><span class='def-StringEdge def-String'>/</span><span class='def-Symbol'>.</span><span class='def-Keyword'>test</span><span class='def-Symbol'>(</span>v<span class='def-Symbol'>)</span><span class='def-Symbol'>)</span> <span class='def-SymbolStrong def-Symbol'>{</span>
+14:                         <span class='def-Keyword'>if</span> <span class='def-Symbol'>(</span>v <span class='def-Symbol'>&amp;&amp;</span> v<span class='def-Symbol'>.</span><span class='def-Keyword'>length</span> <span class='def-Symbol'>></span> <span class='def-NumberDec def-Number'>1</span> <span class='def-Symbol'>&amp;&amp;</span><span class='def-String'> </span><span class='def-StringEdge def-String'>/</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>(</span><span class='regexp-MetaSymb def-Symbol'>^</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymbStrong def-SymbolStrong def-Symbol'>|</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymb def-Symbol'>$</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>)</span><span class='def-StringEdge def-String'>/</span><span class='def-Symbol'>.</span><span class='def-Keyword'>test</span><span class='def-Symbol'>(</span>v<span class='def-Symbol'>)</span><span class='def-Symbol'>)</span> <span class='def-SymbolStrong def-Symbol'>{</span>
 15:                                 e<span class='def-Symbol'>.</span>firstChild<span class='def-Symbol'>.</span>nodeValue <span class='def-Symbol'>=</span> v<span class='def-Symbol'>.</span><span class='def-Keyword'>replace</span><span class='def-Symbol'>(</span><span class='def-StringEdge def-String'>/</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>(</span><span class='regexp-MetaSymb def-Symbol'>^</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymbStrong def-SymbolStrong def-Symbol'>|</span><span class='def-StringContent def-String'>\u00a0</span><span class='regexp-MetaSymb def-Symbol'>$</span><span class='regexp-Quote regexp-MetaSymb def-Symbol'>)</span><span class='def-StringEdge def-String'>/</span><span class='def-Symbol'>,</span> <span class='def-StringEdge def-String'>'</span><span class='def-StringEdge def-String'>'</span><span class='def-Symbol'>)</span><span class='def-SymbolStrong def-Symbol'>;</span>
 16:                                 s<span class='def-Symbol'>.</span>selectNode<span class='def-Symbol'>(</span>e<span class='def-Symbol'>.</span>firstChild<span class='def-Symbol'>,</span> <span class='def-BooleanConstant def-Constant def-Keyword'>true</span><span class='def-Symbol'>,</span> <span class='def-BooleanConstant def-Constant def-Keyword'>false</span><span class='def-Symbol'>,</span> <span class='def-BooleanConstant def-Constant def-Keyword'>false</span><span class='def-Symbol'>)</span><span class='def-SymbolStrong def-Symbol'>;</span> <span class='def-Comment def-Syntax'>// Select and collapse</span>
 17:                         <span class='def-SymbolStrong def-Symbol'>}</span>
